--- a/Mods/Vanilla Cooking Expanded - Bakery/1.6/Languages/French/DefInjected/RecipeDef/VCEBakery_RecipeDef.xml
+++ b/Mods/Vanilla Cooking Expanded - Bakery/1.6/Languages/French/DefInjected/RecipeDef/VCEBakery_RecipeDef.xml
@@ -13,7 +13,7 @@
 <!-- EN: Mix some gourmet cake butter to act as a base for a baked confection. -->
 <VCE_CookGourmetCakeBatter.description>Mélanger de la pâte à gâteau de gourmet qui servira de base à la confection d'une pâtisserie.</VCE_CookGourmetCakeBatter.description>
 <!-- EN: Mixing gourmet cake batter. -->
-<VCE_CookGourmetCakeBatter.jobString>mélange la pâte à gâteau de gourmet</VCE_CookGourmetCakeBatter.jobString>
+<VCE_CookGourmetCakeBatter.jobString>mélange la pâte à gâteau de gourmet.</VCE_CookGourmetCakeBatter.jobString>
 
 
 </LanguageData>
