--- a/Mods/Vanilla Expanded Framework/1.6/Languages/French/DefInjected/JobDef/VEF_JobDef.xml
+++ b/Mods/Vanilla Expanded Framework/1.6/Languages/French/DefInjected/JobDef/VEF_JobDef.xml
@@ -76,6 +76,9 @@
 
 <!-- EN: unloading TargetA. -->
 <Unload.reportString>décharge TargetA.</Unload.reportString>
+  
+<!-- EN: reloading TargetA. -->
+<VEF_ReloadWeaponTrait.reportString>recharge TargetA.</VEF_ReloadWeaponTrait.reportString>
 
 
 </LanguageData>
