--- a/Mods/Vanilla Expanded Framework/1.6/Languages/French/Keyed/VEF_Stats.xml
+++ b/Mods/Vanilla Expanded Framework/1.6/Languages/French/Keyed/VEF_Stats.xml
@@ -15,4 +15,8 @@
 <VFECore.StatsReport_Unpowered>Non alimenté</VFECore.StatsReport_Unpowered>
 
 
+<!-- EN: Range Attack Speed Factor -->
+<VEF_RangeAttackSpeedFactor>Facteur de vitesse d'attaque à distance</VEF_RangeAttackSpeedFactor>
+
+
 </LanguageData>
