--- a/Mods/Vanilla Expanded Framework/1.6/Languages/French/Keyed/VEF_VanillaFurniture.xml
+++ b/Mods/Vanilla Expanded Framework/1.6/Languages/French/Keyed/VEF_VanillaFurniture.xml
@@ -17,6 +17,8 @@
 <VFE_PleaseSelectOutput>Sélectionner la sortie de la machine</VFE_PleaseSelectOutput>
 <!-- EN: This building must be placed on water -->
 <VFE_NeedsWater>Ce bâtiment doit être placé sur l'eau.</VFE_NeedsWater>
+<!-- EN: This building must be placed on sand -->
+<VFE_NeedsSand>Ce bâtiment doit être placé sur le sable.</VFE_NeedsSand>
 
 <!-- Random Building Graphics -->
 
